--- a/index.css
+++ b/index.css
@@ -8,6 +8,10 @@ html, body {
     user-select: none;
 }
 
+body::-webkit-scrollbar {
+    display: none;
+}
+
 input, button {
     border-radius: 8px;
     outline: none;
